--- a/header/header.css
+++ b/header/header.css
@@ -5,10 +5,10 @@
 header
 {
 	background-color : black;
-	box-shadow			 : 0 0.25em 0.25em -0.25em #fb8c00;
-	margin-bottom		 : 0.5em;
-	position				 : fixed;
-	width						 : 100%;
+	box-shadow       : 0 0.25em 0.25em -0.25em #fb8c00;
+	margin-bottom    : 0.5em;
+	position         : fixed;
+	width            : 100%;
 }
 
 header a,
@@ -20,19 +20,24 @@ header button
 header a:hover,
 header button:hover
 {
-	color				: #fb8c00;
+	color       : #fb8c00;
 	text-shadow : 0 0.25em 1em #a9a9a9;
 }
 
 /* Side nav */
  /* The side navigation menu */
 .sidenav {
-	height: 100%; /* 100% Full-height */
-	width: 0; /* 0 width - change this with JavaScript */
+	/* Reverse these two descriptions because want it to come from top */
+	height: 100%;
+	width: 0;
+
 	position: fixed; /* Stay in place */
 	z-index: 1; /* Stay on top */
 	top: 0; /* Stay at the top */
-	right: 0; /* Put nav on right side */
+
+	 /* Put nav on right side */
+	left: 0;
+
 	background-color: #111; /* Black*/
 	overflow-x: hidden; /* Disable horizontal scroll */
 	padding-top: 60px; /* Place content 60px from the top */
@@ -56,11 +61,13 @@ header button:hover
 
 /* Position and style the close button (top right corner) */
 .sidenav .closebtn {
+	/*
 	position: absolute;
 	top: 0;
-	right: 25px;
-	font-size: 36px;
+	right : 25px;
 	margin-left: 50px;
+	*/
+	font-size: 36px;
 }
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
@@ -102,51 +109,52 @@ header button:hover
 
 #header .navbar a
 {
-	padding					: 0 1em;
-	text-align			: center;
+	padding         : 0 1em;
+	text-align      : center;
 	text-decoration : none;
 }
 
 #header .navhome a
 {
-	color				: #fb8c00;
+	color       : #fb8c00;
 	font-weight : bold;
 }
 
 /* Hamburger icon container */
 .hamburger
 {
-	display: inline-block;
-	cursor: pointer;
+	display        : inline-block;
+	cursor         : pointer;
+	margin-right   : 25px;
 	vertical-align : middle;
-	margin-right : 25px;
+	z-index : 10;
 }
 
 /* Meat of the hamburger */
 .bar1, .bar2, .bar3
 {
-	width: 35px;
-	height: 5px;
-	background-color: #333;
-	margin: 6px 0;
-	transition: 0.4s;
+	background-color : white;
+	margin           : 6px 0;
+	transition       : 0.4s;
+	width            : 35px;
+	height           : 5px;
 }
 
 /* Toggle this class when the hamburger icon is clicked */
 .change .bar1
 {
-	transform: translate(0, 11px) rotate(-45deg);
+	transform : translate(0, 11px) rotate(-45deg);
 }
 
 /* Toggle this class when the hamburger icon is clicked */
 .change .bar2
 {
-	opacity: 0;
+	opacity : 0;
 }
 
 /* Toggle this class when the hamburger icon is clicked */
 .change .bar3
 {
-	transform: translate(0, -11px) rotate(45deg);
+	transform : translate(0, -11px) rotate(45deg);
 }
 
