Fixed issues where forgot to load Bootstrap javascript.
* In index.html:

    - Fixed typo when specifying "container" class for Contact. Forgot a
      double quote.

* In donate/donate.css:

    - Removed border around Coindrop button.

* In intro/intro.css:

    - Removed media query to increase the size of the Google Play icon.
      Will keep it the same regardless of screen size.

* In main/:

    - Renamed common.css to helper.css since it just has helper classes.

    - Updated defaults.scss to include default tag information and
      different settings for different screen sizes.

    - Removed navbar settings in defaults.scss

* In navbar/:

    - Moved default navbar settings to navbar.scss

    - Updated navbar so that when the hamburger icon shows up, the
      dropdown menu shows up. Also, the active item will not have a
      border around it. Instead, it will be filled in.

* Removed unused icon and javascript files.

--- a/main/defaults.css
+++ b/main/defaults.css
@@ -1,37 +1,4 @@
 @charset "UTF-8";
-[data-bs-theme=dark] {
-  --nac-body-color: #aaaaaa;
-  --nac-body-font-size: 1.125rem;
-}
-[data-bs-theme=dark] a {
-  --nac-link-color-rgb: 255, 255, 255;
-}
-[data-bs-theme=dark] a:hover {
-  --nac-link-hover-color-rgb: 251, 140, 0;
-}
-[data-bs-theme=dark] .navbar {
-  --nac-tertiary-bg-rgb: 30, 30, 30;
-  --nac-navbar-brand-color: white;
-  --nac-navbar-brand-hover-color: var(--nac-primary);
-}
-[data-bs-theme=dark] .navbar-nav {
-  --nac-nav-link-color: white;
-  --nac-nav-link-hover-color: var(--nac-primary);
-}
-[data-bs-theme=dark] .navbar-brand {
-  --nac-navbar-brand-color: white;
-  --nac-navbar-brand-hover-color: var(--nac-primary);
-}
-[data-bs-theme=dark] .nav-link.active {
-  --nac-nav-pills-link-active-bg: var(--nac-tertiary-bg-rgb);
-  --nac-navbar-active-color: var(--nac-primary);
-  border: 1px solid var(--nac-primary);
-}
-[data-bs-theme=dark] .nav-link.active:hover {
-  --nac-nav-pills-link-active-bg: var(--nac-primary);
-  --nac-navbar-active-color: rgb(var(--nac-tertiary-bg-rgb));
-}
-
 /*!
  * Bootstrap  v5.3.2 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
@@ -11920,6 +11887,54 @@ textarea.form-control-lg {
   }
   .d-print-none {
     display: none !important;
+  }
+}
+[data-bs-theme=dark] {
+  --nac-body-color: #aaaaaa;
+  --nac-body-font-size: 1.125rem;
+  --nac-gutter-x: 3rem;
+}
+[data-bs-theme=dark] html,
+[data-bs-theme=dark] body {
+  height: 100%;
+}
+[data-bs-theme=dark] section {
+  padding-top: 6%;
+  padding-bottom: 6%;
+}
+[data-bs-theme=dark] section:first-child {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+[data-bs-theme=dark] h1, [data-bs-theme=dark] .h1 {
+  font-weight: bold;
+}
+[data-bs-theme=dark] h1 a, [data-bs-theme=dark] .h1 a {
+  text-decoration: none;
+}
+[data-bs-theme=dark] h2, [data-bs-theme=dark] .h2 {
+  color: var(--nac-primary);
+  font-weight: bold;
+}
+[data-bs-theme=dark] h1 + p, [data-bs-theme=dark] .h1 + p,
+[data-bs-theme=dark] h2 + p,
+[data-bs-theme=dark] .h2 + p {
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+[data-bs-theme=dark] a {
+  --nac-link-color-rgb: 255, 255, 255;
+}
+[data-bs-theme=dark] a:hover {
+  --nac-link-hover-color-rgb: 251, 140, 0;
+}
+@media (min-width: 992px) {
+  [data-bs-theme=dark] {
+    --nac-gutter-x: 1.5rem;
+  }
+  [data-bs-theme=dark] section {
+    padding-top: 3%;
+    padding-bottom: 3%;
   }
 }
 
