--- a/main/defaults.css
+++ b/main/defaults.css
@@ -11889,6 +11889,22 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+/* Divider */
+.my-divider {
+  width: 100%;
+  height: 3rem;
+  background-color: rgba(0, 0, 0, 0.25);
+  border: solid rgba(0, 0, 0, 0.25);
+  border-width: 2px 0;
+  box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1), inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
+}
+
+/* How app icon and name look together */
+.app-icon-and-name {
+  max-height: 36px;
+  margin-right: 12px;
+}
+
 [data-bs-theme=dark] {
   --nac-body-color: #aaaaaa;
   --nac-body-font-size: 1.125rem;
@@ -11899,8 +11915,8 @@ textarea.form-control-lg {
   height: 100%;
 }
 [data-bs-theme=dark] section {
-  padding-top: 6%;
-  padding-bottom: 6%;
+  padding-top: 9%;
+  padding-bottom: 9%;
 }
 [data-bs-theme=dark] section:first-child {
   padding-top: 0;
@@ -11911,6 +11927,9 @@ textarea.form-control-lg {
 }
 [data-bs-theme=dark] h1 a, [data-bs-theme=dark] .h1 a {
   text-decoration: none;
+}
+[data-bs-theme=dark] h1 a:hover, [data-bs-theme=dark] .h1 a:hover {
+  color: #fb8c00;
 }
 [data-bs-theme=dark] h2, [data-bs-theme=dark] .h2 {
   color: var(--nac-primary);
