--- a/main/defaults.scss
+++ b/main/defaults.scss
@@ -27,6 +27,68 @@ $prefix: "nac-";
 // Then import Bootstrap
 @import "../lib/node_modules/bootstrap/scss/bootstrap";
 
+//// Required Bootstrap imports
+//@import "../lib/node_modules/bootstrap/scss/variables";
+//@import "../lib/node_modules/bootstrap/scss/variables-dark";
+//@import "../lib/node_modules/bootstrap/scss/maps";
+//@import "../lib/node_modules/bootstrap/scss/mixins";
+//@import "../lib/node_modules/bootstrap/scss/root";
+//
+//// Optional components
+//@import "../lib/node_modules/bootstrap/scss/utilities";
+//@import "../lib/node_modules/bootstrap/scss/reboot";
+//@import "../lib/node_modules/bootstrap/scss/containers";
+//@import "../lib/node_modules/bootstrap/scss/grid";
+//@import "../lib/node_modules/bootstrap/scss/helpers";
+//@import "../lib/node_modules/bootstrap/scss/utilities/api";
+//
+//// Extra optional components
+//@import "../lib/node_modules/bootstrap/scss/accordion";
+//@import "../lib/node_modules/bootstrap/scss/alert";
+//@import "../lib/node_modules/bootstrap/scss/badge";
+//@import "../lib/node_modules/bootstrap/scss/breadcrumb";
+//@import "../lib/node_modules/bootstrap/scss/button-group";
+//@import "../lib/node_modules/bootstrap/scss/buttons";
+//@import "../lib/node_modules/bootstrap/scss/card";
+//@import "../lib/node_modules/bootstrap/scss/carousel";
+//@import "../lib/node_modules/bootstrap/scss/close";
+//@import "../lib/node_modules/bootstrap/scss/dropdown";
+//@import "../lib/node_modules/bootstrap/scss/forms";
+//@import "../lib/node_modules/bootstrap/scss/images";
+//@import "../lib/node_modules/bootstrap/scss/list-group";
+//@import "../lib/node_modules/bootstrap/scss/modal";
+//@import "../lib/node_modules/bootstrap/scss/nav";
+//@import "../lib/node_modules/bootstrap/scss/navbar";
+//@import "../lib/node_modules/bootstrap/scss/offcanvas";
+//@import "../lib/node_modules/bootstrap/scss/pagination";
+//@import "../lib/node_modules/bootstrap/scss/placeholders";
+//@import "../lib/node_modules/bootstrap/scss/popover";
+//@import "../lib/node_modules/bootstrap/scss/progress";
+//@import "../lib/node_modules/bootstrap/scss/spinners";
+//@import "../lib/node_modules/bootstrap/scss/tables";
+//@import "../lib/node_modules/bootstrap/scss/toasts";
+//@import "../lib/node_modules/bootstrap/scss/tooltip";
+//@import "../lib/node_modules/bootstrap/scss/transitions";
+//@import "../lib/node_modules/bootstrap/scss/type";
+
+/* Divider */
+.my-divider
+{
+	width: 100%;
+	height: 3rem;
+	background-color: rgba(0, 0, 0, 0.25);
+	border: solid rgba(0, 0, 0, 0.25);
+	border-width: 2px 0;
+	box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+}
+
+/* How app icon and name look together */
+.app-icon-and-name
+{
+	max-height    : 36px;
+	margin-right : 12px;
+}
+
 // Set default settings (Dark theme is the default for this website)
 [data-bs-theme="dark"]
 {
@@ -47,8 +109,8 @@ $prefix: "nac-";
 
 	section
 	{
-		padding-top    : 6%;
-		padding-bottom : 6%;
+		padding-top    : 9%;
+		padding-bottom : 9%;
 
 		&:first-child
 		{
@@ -65,6 +127,11 @@ $prefix: "nac-";
 		a
 		{
 			text-decoration : none;
+
+			&:hover
+			{
+				color : $primary;
+			}
 		}
 	}
 
