New improved edition of website!
* In index.html:

    - Removed my name from the title of the tab.

    - Added name of the author, "by Gabe Gonzalez", underneath the intro
      title.

    - Added back usage of Font Awesome for the left/right icons in the
      Features section, as well as the Github icon in the footer.

    - Moved sourcing of "contact.js" to end of body.

    - Added "sticky-top" to class list of navbar.

    - Attempted to use Scroll Spy so that the navbar items are active
      when they are scrolled to, but it is not working right now.

    - Changed width of Features section from 12 to 8.

    - Changed description of Features section so that it is shorter and
      easier to read.

    - Removed "d-none" class from each caption because I believe that is
      what was preventing the captions from showing up on mobile.

* In core/defaults.scss:

    - Added selector of "h1 + span + p" for the name of the author.

    - For selector "h1 + span + p" and all the "h1/2 + p" selectors,
      changed margin to padding.

    - Added class for the author.

* In footer/footer.css:

    - Added style for Github icon and hover action.

* In home/contact.css:

    - Added styles for the "Send" button and what icon should be shown
      when it is clicked to indicate to the user what is happening
      without using words.

* In home/contact.js:

    - Organized code so that it was not all in one function. Separated
      out so that it is in multiple functions.

* In home/features.scss:

    - Added coloring and hover action for the new usage of the Font
      Awesome icons when the arrow icons are neutral and hovered.

    - Made the caption background more opaque so that it is easier to
      read.

--- a/core/defaults.css
+++ b/core/defaults.css
@@ -11935,17 +11935,24 @@ textarea.form-control-lg {
   color: var(--nac-primary);
   font-weight: bold;
 }
-[data-bs-theme=dark] h1 + p, [data-bs-theme=dark] .h1 + p,
+[data-bs-theme=dark] h1 + span + p, [data-bs-theme=dark] .h1 + span + p,
+[data-bs-theme=dark] h1 + p,
+[data-bs-theme=dark] .h1 + p,
 [data-bs-theme=dark] h2 + p,
 [data-bs-theme=dark] .h2 + p {
-  margin-top: 25px;
-  margin-bottom: 25px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 [data-bs-theme=dark] a {
   --nac-link-color-rgb: 255, 255, 255;
 }
 [data-bs-theme=dark] a:hover {
   --nac-link-hover-color-rgb: 251, 140, 0;
+}
+[data-bs-theme=dark] .subtitle {
+  color: white;
+  font-size: 0.8em;
+  opacity: 0.85;
 }
 @media (min-width: 992px) {
   [data-bs-theme=dark] {
