--- a/footer/footer.css
+++ b/footer/footer.css
@@ -4,8 +4,13 @@
 	padding-right : 12px;
 }
 
-.github-icon > img
+.github-icon
 {
-	max-height : 28px;
-	max-width  : 28px;
+	color     : white;
+	font-size : 1.25rem;
+}
+
+.github-icon:hover
+{
+	color : var(--nac-primary);
 }
