Got scrollspy to work!
* In index.html:

    - Added scrollspy to "body" tag.

    - Changed "navbar-nav" to "ul" tag and changed children of this to
      be "li" tags with an "a" child.

* In core/defaults.scss:

    - Needed to change "body" tag to have a relative position.

* In navbar/navbar.scss:

    - Added selector so that if a nav-link is in focus, but is NOT
      active, then change its color back to white. Before this change,
      its color would have been the primary color, which is no good
      because only the active element should be that color.

--- a/core/defaults.css
+++ b/core/defaults.css
@@ -11914,6 +11914,9 @@ textarea.form-control-lg {
 [data-bs-theme=dark] body {
   height: 100%;
 }
+[data-bs-theme=dark] body {
+  position: relative;
+}
 [data-bs-theme=dark] section {
   padding-top: 9%;
   padding-bottom: 9%;
